--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@babel/runtime": "^7.8.7",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "react-dom": "^16.13.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
